Added download button for savegame

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
     <canvas class="map"></canvas>
     <canvas class="shadow"></canvas>
     <div class="buttons">
-      <button onclick="toggleShadow(event)">shadow</button>
+      <span>
+        <button onclick="downloadSavegame()">⥥</button>
+        <button onclick="toggleShadow(event)">shadow</button>
+      </span>
       <div class="pawn-buttons"></div>
     </div>
     <div class="pawns"></div>
